<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GitDroid</string>
    <string name="test">11111</string>

    <string name="loading">Loading......</string>
    <string name="load_fail">Failed to load</string>
    <string name="please_wait">Please Wait</string>
    <string name="error_occurred">Error Occurred, Please Check Your Internet</string>

    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="starred">Starred</string>
    <string name="following">Following</string>
    <string name="repos">Repositorites</string>
    <string name="members">Members</string>
    <string name="code">Code</string>
    <string name="recently_indexed">Recently indexed</string>
    <string name="least_recently_indexed">Least recently indexed</string>
    <string name="most_followers">Most Followers</string>
    <string name="fewest_followers">Fewest followers</string>
    <string name="most_recently_joined">Most recently joined</string>
    <string name="least_recently_joined">Least recently joined</string>
    <string name="most_repositories">Most repositories</string>
    <string name="fewest_repositories">Fewest repositories</string>
    <string name="users">Users</string>
    <string name="events">Events</string>
    <string name="settings">Settings</string>
    <string name="public_events">Public Events</string>
    <string name="gists">Gists</string>
    <string name="all_gists">All Gists</string>
    <string name="starred_gists">Starred Gists</string>
    <string name="orgs">Organizations</string>
    <string name="explore">Explore</string>
    <string name="files">Files</string>
    <string name="trend_repositories">Trending repositories</string>
    <string name="starred_by_people_you_follow">Starred by people you follow</string>
    <string name="load_more">Loading</string>
    <string name="no_more">No More</string>
    <string name="watchers">Watchers</string>
    <string name="stargazers">Stargazers</string>
    <string name="forks">Forks</string>
    <string name="readme">README</string>
    <string name="view_repo_content">Files</string>
    <string name="click_load_again">Click To Load Again</string>
    <string name="search">Search</string>
    <string name="search_hint">Search...</string>
    <string name="sort">Sort By</string>
    <string name="click_to_refresh">Click To Refresh</string>
    
    <string name="best_match">Best match</string>
    <string name="most_stars">Most stars</string>
    <string name="fewest_stars">Fewest stars</string>
    <string name="most_forks">Most forks</string>
    <string name="fewest_forks">Fewest forks</string>
    <string name="recently_updated">Recently updated</string>
    <string name="least_recently_updated">Least Recently Updated</string>

    <string name="pull_requests">Pull Requests</string>
    <string name="issues">Issues</string>
    <string name="state">State</string>
    <string name="created">Created</string>
    <string name="assigned">Assigned</string>
    <string name="mentioned">Mentioned</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="most_commented">Most commmented</string>
    <string name="least_commented">Least commented</string>
    <string name="comments">Comments</string>
    <string name="release_notes">Releases Notes</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="ensure_to_download">Are you sure to download?</string>
    <string name="downloading">Downloading</string>
    <string name="download_complete">Download complete</string>
    <string name="remote_service_started">remote_service_started</string>
    <string name="download_fail">Download fail</string>
    <string name="no_free_space">No free space</string>

    <string name="details">Details</string>
    <string name="fork">Fork</string>
    <string name="fork_success">Succeed to Fork</string>
    <string name="fork_fail">Failed to fork</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <string name="watch">Watch</string>
    <string name="not_watching">Not watching</string>
    <string name="watching">Watching</string>
    
    <string name="watch_success">Succeed to Watch</string>
    <string name="watch_fail">Fail to Watch</string>
    <string name="stop_watch_success">Succeed to Stop Watch</string>
    <string name="stop_watch_fail">Fail to Stop Watch</string>
    <string name="follow_success">Succeed to Follow</string>
    <string name="follow_fail">Fail to Follow</string>
    <string name="unfollow_success">Succeed to Unfollow</string>
    <string name="unfollow_fail">Fail to Unfollow</string>

    <string name="language_setting">LANGUAEG SETTING</string>
    <string name="simplified_chinese">中文</string>
    <string name="english">English</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_choose">Please Make a Choice</string>
    <string name="please_input_username">Empty Username</string>
    <string name="please_input_password">Empty Password</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="create_comment">Create Comment</string>
    <string name="uploading">Uploading</string>
    <string name="upload_fail">Upload Fail</string>
    <string name="upload_success">Upload Success</string>
    <string name="please_input_body_first">Please Input Body First</string>

    <string name="information">Information</string>
    <string name="choose">Choose</string>
    <string name="commits">Commits</string>
    <string name="branches">Branches</string>
    <string name="releases">Releases</string>
    <string name="contributors">Contributors</string>
    <string name="tags">Tags</string>
    <string name="switch_branches_or_tags">Switch branches/tags</string>
    <string name="additions">Additions</string>
    <string name="deletions">Deletions</string>
    <string name="changes">Changes</string>
    <string name="conversations">Conversations</string>

    <string name="no_due_date">No due date</string>

    <string name="manager">Manager</string>
    <string name="milestones">Milestones</string>
    <string name="furthest_due_date">Furthest due date</string>
    <string name="closest_due_date">Closest due date</string>
    <string name="least_complete">Least complete</string>
    <string name="most_complete">Most complete</string>
    <string name="most_issues">Most issues</string>
    <string name="least_issues">Least issues</string>

    <string name="trending">Trending</string>
    <string name="time">Time</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    
    <string name="complete">complete</string>
    <string name="open">open</string>
    <string name="closed">closed</string>

    <string name="started">Starred</string>
    <string name="unstarred">Unstarred</string>

    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="create_issue">Create Issue</string>
    <string name="issue_no_title">Title of the issue is required</string>

    <string name="milestone">MileStone</string>
    <string name="assignees">Assignees</string>
    <string name="labels">Labels</string>

    <string name="type">Type</string>
    <string name="repos_all">All</string>
    <string name="repos_owner">Owner</string>
    <string name="repos_public">Public</string>
    <string name="repos_private">Private</string>
    <string name="repos_sources">Sources</string>
    <string name="repos_forks">Forks</string>
    <string name="repos_member">Member</string>
    
    <string name="name_az">Name(A-Z)</string>
    <string name="name_za">Name(Z-A)</string>

    <string name="recently_starred">Recently starred</string>
    <string name="recently_active">Recently active</string>

    <string name="something_wrong_with_network_connection">Something wrong with network connection</string>

    <string name="filter">Filter by</string>

    <string name="more">More</string>

    <string name="night_theme">Night Theme</string>
    <string name="about">About</string>
    <string name="contract_me">Contract Me</string>
    <string name="open_source_components">Open Source Components</string>
    
    <string name="about_details">Created By Zhang Yu</string>
    <string name="my_email">zpauly1996@gmail.com</string>
    <string name="my_github">https://github.com/zpauly/GitHub_Android</string>

    <string name="glide">bumptech/glide</string>
    <string name="glide_link">https://github.com/bumptech/glide</string>
    <string name="retrofit">square/retrofit</string>
    <string name="retrofit_link">https://github.com/square/retrofit</string>
    <string name="rxandroid">ReactiveX/RxAndroid</string>
    <string name="rxandroid_link">https://github.com/ReactiveX/RxAndroid</string>
    <string name="rxjava">ReactiveX/RxJava</string>
    <string name="rxjava_link">https://github.com/ReactiveX/RxJava</string>
    <string name="nineoldandroids">JakeWharton/NineOldAndroids</string>
    <string name="nineoldandroids_link">https://github.com/JakeWharton/NineOldAndroids</string>
    <string name="circleimageview">hdodenhof/CircleImageView</string>
    <string name="circleimageview_link">https://github.com/hdodenhof/CircleImageView</string>
    <string name="materialdialogs">afollestad/material-dialogs</string>
    <string name="materialdialogs_link">https://github.com/afollestad/material-dialogs</string>
    <string name="gifdrawable">android-gif-drawable</string>
    <string name="gifdrawable_link">https://github.com/koral--/android-gif-drawable</string>
    <string name="androidsvg">BigBadaboom/androidsvg</string>
    <string name="androidsvg_link">https://github.com/BigBadaboom/androidsvg</string>
    <string name="codeview">avraampiperidis/Codeview</string>
    <string name="codeview_link">https://github.com/avraampiperidis/Codeview</string>
    <string name="butterknife">JakeWharton/butterknife</string>
    <string name="butterknife_link">https://github.com/JakeWharton/butterknife</string>
    <string name="jsoup">jhy/jsoup</string>
    <string name="jsoup_link">https://github.com/jhy/jsoup</string>

    <string name="choose_code_style">Choose A Code Style</string>
    <string name="code_style">Code Style</string>

    <string name="contract_me_details">If you have any issues or suggestions,welcome to contract me.Any kind of feedback is greatly appreciated.</string>

    <string name="exit">Sign out</string>

    <string name="double_click_to_exit">Click Again to Exit</string>

    <string name="YINGYONGBAO">YingYongBao</string>
    <string name="GOOGLE_PLAY">Google Play</string>
    <string name="KUAN">KUAN</string>
</resources>