<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_profile"
            android:checked="true"
            android:icon="@drawable/ic_account_circle_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/navigation_events"
            android:icon="@mipmap/ic_events"
            android:title="@string/events" />
        <item
            android:id="@+id/navigation_repos"
            android:icon="@mipmap/ic_repos"
            android:title="@string/repos" />
        <item
            android:id="@+id/navigation_orgs"
            android:icon="@mipmap/ic_organization"
            android:title="@string/orgs" />
        <item
            android:id="@+id/navigation_gists"
            android:icon="@mipmap/ic_gists"
            android:title="@string/gists" />
    </group>
</menu>